# CMakeDemo

./: cmake_notes.txt
src/: CMakeLists.txt
src/mylib_shared/: CMakeLists.txt  mylibshared.cpp  mylibshared.h
src/mylib_static/: CMakeLists.txt  myclass.cpp
src/theapp/: CMakeLists.txt  main.cpp
src/utillib_static/: CMakeLists.txt  myutilclass.cpp  myutilclass.h
